# cutting-a-tree

./: README.md  index.html
data/: DLA1-edges.csv  DLA1-nodes.csv
js/: all.js
speed/: CMakeLists.txt  README.md  prune.cxx
speed/data/: remove_vertices.json
